# EndureIO

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/endureio/: __init__.py  fit.py
tests/: test_fit.py
tests/data/: short-run.fit
